making all member functions static makes more sense to me. It also makes passing member functions as an argument to another function more elegant, and hopefully it will make inlining them more likely (no idea)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.14)
 project(mitm_sequential)
 
 set(CMAKE_CXX_STANDARD 20)
+include_directories(include)
 
 add_executable(test demos/basic_demo.cpp mitm_sequential.hpp
         include/dict.hpp
