--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,12 @@ cmake_minimum_required(VERSION 3.20)
 project(mitm_sequential)
 
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON) # Compiler command json
+# sorry, for now gcc is the source of truth.
+add_compile_options(-ggdb -Wall -Wextra -pedantic)
+
+
 include_directories(include)
 
 
