--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,12 +13,14 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON) # Compiler command json
 
 # common compiler option (between clang and gcc, not sure about the others)
 add_compile_options(-ggdb -Wall -Wextra -pedantic -O3 -fsanitize=address)
+# Needed this, other wise it won't link
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=address")
 
 # The little bird says clang has a nicer error report than gcc!
 # export CC=/usr/bin/clang
 # export CXX=/usr/bin/clang++
-set(CMAKE_C_COMPILER /usr/bin/clang)
-set(CMAKE_CXX_COMPILER /usr/bin/clang++)
+# set(CMAKE_C_COMPILER /usr/bin/clang)
+# set(CMAKE_CXX_COMPILER /usr/bin/clang++)
 
 
 cmake_print_variables(CMAKE_CXX_COMPILER_ID)
@@ -26,7 +28,7 @@ cmake_print_variables(CMAKE_CXX_COMPILER_ID)
 # it's a bit ugly, since it won't generate agnostic Makefile
 if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
     # GCC specific options
-    add_compile_options(-fopt-info-all -fanalyzer)
+    add_compile_options( -fanalyzer)
 elseif (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
     # Clang specific options
     add_compile_options(-Rpass=.*)
