Finally understood that complicating requirements for repr when given an array, i.e. it should have a constructor/destructor that might use new[] or malloc, was a truly bad decision. We should've opted for only wrapping a struct around the array!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,12 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON) # Compiler command json
 
 
 # common compiler option (between clang and gcc, not sure about the others)
-add_compile_options(-ggdb -Wall -Wextra -pedantic -fsanitize=address)
+# add_compile_options(-ggdb -Wall -Wextra -pedantic -fsanitize=address)
+add_compile_options(-ggdb -Wall -Wextra -pedantic)
 # Needed this, other wise it won't link
-set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=address")
+# set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=address")
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")
+
 
 # The little bird says clang has a nicer error report than gcc!
 # export CC=/usr/bin/clang
