adapting sha2 demo with mix functions. Also, reinterpreting  return type an index rather than a function!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,10 +13,10 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON) # Compiler command json
 
 # common compiler option (between clang and gcc, not sure about the others)
 # add_compile_options(-ggdb -Wall -Wextra -pedantic -fsanitize=address)
-add_compile_options(-march=native -ggdb -Wall -Wextra -pedantic -O3 -flto)
+add_compile_options(-march=native -ggdb -Wall -Wextra -pedantic -O0)
 # Needed this, other wise it won't link
 # set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=address")
-set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -flto")
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")
 
 
 # The little bird says clang has a nicer error report than gcc!
@@ -43,18 +43,18 @@ cmake_print_variables(CMAKE_CXX_COMPILER_ID)
 include_directories(include)
 
 
-add_executable(speck32_demo
-               demos/speck32_demo.cpp
-	       claw_engine.hpp
-       	       base_engine.hpp
-	       AbstractClawProblem.hpp
-	       AbstractDomain.hpp
-	       dict.hpp
-	       base_engine.hpp
-	       include/memory.hpp
-	       include/prng.hpp
-	       include/timing.hpp
-               demos/speck32.hpp)
+# add_executable(speck32_demo
+#                demos/speck32_demo.cpp
+# 	       claw_engine.hpp
+#        	       base_engine.hpp
+# 	       AbstractClawProblem.hpp
+# 	       AbstractDomain.hpp
+# 	       dict.hpp
+# 	       base_engine.hpp
+# 	       include/memory.hpp
+# 	       include/prng.hpp
+# 	       include/timing.hpp
+#                demos/speck32.hpp)
 
 add_executable(sha2_demo
         demos/sha2_demo.cpp
