Restructuring files for a better organization. There is still a compiler error (mismatching arguments)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,9 +59,10 @@ include_directories(include)
 add_executable(sha2_collision_demo
         demos/sha2_collision_demo.cpp
 	demos/sha256_x86.c # demos/sha256.c
+	mitm.hpp
+	engine.hpp
 	naive_engine.hpp
 	collision_engine.hpp
-	base_engine.hpp
 	AbstractCollisionProblem.hpp
 	AbstractDomain.hpp
         dict.hpp
@@ -74,9 +75,10 @@ add_executable(sha2_collision_demo
 add_executable(sha2_claw_demo
         demos/sha2_claw_demo.cpp
 	demos/sha256_x86.c
+	mitm.hpp
+	engine.hpp
 	naive_engine.hpp
 	collision_engine.hpp
-	base_engine.hpp
 	AbstractCollisionProblem.hpp
 	AbstractDomain.hpp
         dict.hpp
