Adding sha2_collision_demo to the CMake, and debug macros for claw and collision. demos/sha2_collision_demo.cpp needs modification

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,8 @@ set_property(CACHE AES_IMPL PROPERTY STRINGS auto portable aesni neon)
 add_compile_options(-march=native -ggdb -Wall -Wextra -pedantic -O3 -flto -g -no-pie -fno-pie -rdynamic -DBOOST_STACKTRACE_USE_ADDR2LINE)
 # Needed this, other wise it won't link
 # set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=address")
-set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -ltbb -fsanitize=address")
+# Using almost every possible sanitizer!
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -ltbb -fsanitize=address,undefined,leak,pointer-compare,pointer-subtract,shift,integer-divide-by-zero,null,return,vla-bound,signed-integer-overflow,bounds,alignment,bool,enum,vptr")
 
 
 # Boost stacktrace # sudo apt-get install libboost-stacktrace-dev
@@ -69,20 +70,24 @@ include_directories(include)
 
 
 
-# add_executable(sha2_collision_demo
-#         demos/sha2_collision_demo.cpp
-# 	demos/sha256_x86.c # demos/sha256.c
-# 	mitm.hpp
-# 	engine.hpp
-# 	naive_engine.hpp
-# 	collision_engine.hpp
-# 	AbstractCollisionProblem.hpp
-# 	AbstractDomain.hpp
-#         dict.hpp
-#       	include/memory.hpp
-# 	include/prng.hpp
-# 	include/timing.hpp)
+add_executable(sha2_collision_demo
+        demos/sha2_collision_demo.cpp
+	demos/sha256_x86.c # demos/sha256.c
+	mitm.hpp
+	engine.hpp
+	naive_engine.hpp
+	collision_engine.hpp
+	AbstractCollisionProblem.hpp
+	AbstractDomain.hpp
+        dict.hpp
+      	include/memory.hpp
+	include/prng.hpp
+	include/timing.hpp)
 
+
+
+
+target_compile_definitions(sha2_collision_demo PUBLIC COLLISION_DEBUG)
 
 
 add_executable(sha2_claw_demo
@@ -100,10 +105,14 @@ add_executable(sha2_claw_demo
 	include/timing.hpp)
 
 
+# Debugging the execution if the results don't add up
+target_compile_definitions(sha2_claw_demo PUBLIC CLAW_DEBUG)
+
+
 find_package(OpenMP)
 if(OpenMP_CXX_FOUND)
   # target_link_libraries(sha2_collision_1collision_demo PUBLIC OpenMP::OpenMP_CXX)
-  # target_link_libraries(sha2_collision_demo PUBLIC OpenMP::OpenMP_CXX)
+  target_link_libraries(sha2_collision_demo PUBLIC OpenMP::OpenMP_CXX)
   target_link_libraries(sha2_claw_demo PUBLIC OpenMP::OpenMP_CXX)
 endif()
 
@@ -131,3 +140,19 @@ elseif("${AES_IMPL}" STREQUAL "neon")
 elseif("${AES_IMPL}" STREQUAL "portable")
     target_compile_definitions(sha2_claw_demo PUBLIC USE_CXX_AES)
 endif()
+
+
+if("${AES_IMPL}" STREQUAL "aesni")
+    target_compile_definitions(sha2_collision_demo PUBLIC USE_INTEL_AESNI)
+    if(MSVC)
+        target_compile_options(sha2_collision_demo PRIVATE /arch:SSE2)
+    else()
+        target_compile_options(sha2_collision_demo PRIVATE -maes)
+    endif()
+elseif("${AES_IMPL}" STREQUAL "neon")
+    target_compile_definitions(sha2_collision_demo PUBLIC USE_NEON_AES)
+    target_compile_options(sha2_collision_demo PRIVATE -march=armv8-a+crypto)
+elseif("${AES_IMPL}" STREQUAL "portable")
+    target_compile_definitions(sha2_collision_demo PUBLIC USE_CXX_AES)
+endif()
+ 
