--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -23,4 +23,11 @@ add_executable(double_speck64_demo
 target_link_libraries(double_speck64_demo PUBLIC OpenMP::OpenMP_CXX)
 target_include_directories(double_speck64_demo PRIVATE ../include)
 
-
+if(MPI_CXX_FOUND)
+    add_executable(mpi_double_speck64_demo
+        mpi_double_speck64_demo.cpp
+        speck64128.c)
+    target_link_libraries(mpi_double_speck64_demo PUBLIC OpenMP::OpenMP_CXX)
+    target_include_directories(mpi_double_speck64_demo PRIVATE ../include)
+    target_link_libraries(mpi_double_speck64_demo PUBLIC MPI::MPI_CXX)
+endif()
