double-DES example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ add_compile_options(-march=native -ggdb -Wall)
 # The little bird says clang has a nicer error report than gcc!
 
 find_package(MPI REQUIRED)
+find_package(OpenSSL REQUIRED)     # DES implementation
+
 
 add_subdirectory(examples)
 
