tentative cardinality estimation

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -10,6 +10,10 @@ add_executable(double_speck64_demo
     double_speck64_demo.cpp)
 target_include_directories(double_speck64_demo PRIVATE ../include)
 
+add_executable(double_aes_demo 
+    aes.c double_aes_demo.cpp)
+target_include_directories(double_aes_demo PRIVATE ../include)
+
 
 add_executable(double_des_demo double_des_demo.cpp)
 target_include_directories(double_des_demo PRIVATE ../include des)
@@ -31,7 +35,13 @@ add_executable(mpi_double_speck64_bench
 target_include_directories(mpi_double_speck64_bench PRIVATE ../include)
 target_link_libraries(mpi_double_speck64_bench PUBLIC MPI::MPI_CXX)
 
+add_executable(mpi_double_aes_bench
+    aes.c mpi_double_aes_bench.cpp)
+target_include_directories(mpi_double_aes_bench PRIVATE ../include)
+target_link_libraries(mpi_double_aes_bench PUBLIC MPI::MPI_CXX)
+
 add_executable(mpi_sha2_big_collision_demo
     mpi_sha2_big_collision_demo.cpp sha256.c)
 target_include_directories(mpi_sha2_big_collision_demo PRIVATE ../include)
 target_link_libraries(mpi_sha2_big_collision_demo PUBLIC MPI::MPI_CXX)
+
